# Opulator

./: CMakeLists.txt  changed code  circuit  graph  fs_compat.h  main.cpp  save_load.cpp  save_load.h  win_open_dialog.h  win_save_dialog.h
